// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer should hide the border 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  opacity: 100%;
}

.c1 {
  min-height: 35px;
  padding: 0 32px;
  font-size: 16px;
  border-bottom: 4px solid;
  border-bottom-color: #ffffff;
}

.c1:hover {
  border-bottom-color: #000000;
}

.c2 {
  font-family: Inter;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  margin: 10px 0;
  color: #000000;
}

<body>
  <div>
    <div
      class="c0 c1"
      value="Tab 1"
    >
      <p
        class="c2"
      >
        Tab 1
      </p>
    </div>
  </div>
</body>
`;

exports[`Spacer should render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  opacity: 100%;
}

.c1 {
  min-height: 35px;
  padding: 0 32px;
  font-size: 16px;
  border-bottom: 4px solid;
  border-bottom-color: #ffffff;
}

.c1:hover {
  border-bottom-color: #000000;
}

.c2 {
  font-family: Inter;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  margin: 10px 0;
  color: #000000;
}

<body>
  <div>
    <div
      class="c0 c1"
      value="Tab 1"
    >
      <p
        class="c2"
      >
        Tab 1
      </p>
    </div>
  </div>
</body>
`;

exports[`Spacer should show a bottom border when active 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  opacity: 100%;
}

.c1 {
  min-height: 35px;
  padding: 0 32px;
  font-size: 16px;
  border-bottom: 4px solid;
  border-bottom-color: #000000;
}

.c1:hover {
  border-bottom-color: #000000;
}

.c2 {
  font-family: Inter;
  font-size: 14px;
  font-weight: 500;
  line-height: 24px;
  margin: 10px 0;
  color: #000000;
}

<body>
  <div>
    <div
      class="c0 c1"
      value="Tab 1"
    >
      <p
        class="c2"
      >
        Tab 1
      </p>
    </div>
  </div>
</body>
`;
